fixed write question bot